welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:17: error: illegal start of simple expression
}
^Poucet:20: error: 'while' expected but '}' found.
	}
        ^